--- a/rollup/core/classes/RollupState.cls
+++ b/rollup/core/classes/RollupState.cls
@@ -1,6 +1,7 @@
 public without sharing virtual class RollupState implements System.Queueable, System.Finalizer {
   protected transient String key;
   protected transient Integer keyLength;
+  protected transient String typeName;
   protected final Set<String> jobIds = new Set<String>();
 
   private final transient Map<String, RollupState> keyToState {
@@ -29,20 +30,14 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
     this.keyToState.put(state.key, state);
   }
 
-  public virtual override String toString() {
+  public virtual Map<String, Object> getUntypedState() {
     throw new SerializationException('Should not make it here');
   }
 
   public class AverageInfo extends RollupState {
     public Decimal denominator = 0;
     public Decimal numerator = 0;
-    public Set<Object> distinctNumerators {
-      get {
-        this.distinctNumerators = this.distinctNumerators ?? new Set<Object>();
-        return this.distinctNumerators;
-      }
-      private set;
-    }
+    public Set<Object> distinctNumerators = new Set<Object>();
 
     public void increment(Decimal value) {
       this.numerator += value;
@@ -54,17 +49,15 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
       return AverageInfo.class;
     }
 
-    public override String toString() {
-      return JSON.serialize(
-        new Map<String, Object>{
-          'denominator' => this.denominator,
-          'distinctNumerators' => this.distinctNumerators,
-          'key' => this.key,
-          'keyLength' => this.keyLength,
-          'numerator' => this.numerator,
-          'type' => this.getType().getName()
-        }
-      );
+    public override Map<String, Object> getUntypedState() {
+      return new Map<String, Object>{
+        'denominator' => this.denominator,
+        'distinctNumerators' => this.distinctNumerators,
+        'key' => this.key,
+        'keyLength' => this.keyLength,
+        'numerator' => this.numerator,
+        'typeName' => this.getType().getName()
+      };
     }
 
     public override RollupState parse(Map<String, Object> values) {
@@ -87,16 +80,14 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
       return MostInfo.class;
     }
 
-    public override String toString() {
-      return JSON.serialize(
-        new Map<String, Object>{
-          'largestPointCounter' => this.largestPointCounter,
-          'key' => this.key,
-          'keyLength' => this.keyLength,
-          'type' => this.getType().getName(),
-          'value' => this.value
-        }
-      );
+    public override Map<String, Object> getUntypedState() {
+      return new Map<String, Object>{
+        'largestPointCounter' => this.largestPointCounter,
+        'key' => this.key,
+        'keyLength' => this.keyLength,
+        'typeName' => this.getType().getName(),
+        'value' => this.value
+      };
     }
 
     public override RollupState parse(Map<String, Object> values) {
@@ -117,10 +108,14 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
       return SObjectInfo.class;
     }
 
-    public override String toString() {
-      return JSON.serialize(
-        new Map<String, Object>{ 'item' => this.item, 'key' => this.key, 'keyLength' => this.keyLength, 'type' => this.getType().getName() }
-      );
+    public override Map<String, Object> getUntypedState() {
+      return new Map<String, Object>{
+        'item' => this.item,
+        'key' => this.key,
+        'keyLength' => this.keyLength,
+        'typeName' => this.getType().getName(),
+        'itemType' => '' + this.item.getSObjectType()
+      };
     }
 
     public override RollupState parse(Map<String, Object> values) {
@@ -140,10 +135,8 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
       return GenericInfo.class;
     }
 
-    public virtual override String toString() {
-      return JSON.serialize(
-        new Map<String, Object>{ 'key' => this.key, 'keyLength' => this.keyLength, 'type' => this.getType().getName(), 'value' => this.value }
-      );
+    public virtual override Map<String, Object> getUntypedState() {
+      return new Map<String, Object>{ 'key' => this.key, 'keyLength' => this.keyLength, 'typeName' => this.getType().getName(), 'value' => this.value };
     }
 
     public virtual override RollupState parse(Map<String, Object> values) {
@@ -154,86 +147,61 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
 
   public void loadState(String jobId, Set<String> relatedRecordKeys) {
     List<RollupState__c> matchingState = this.loadOrRetrieveCachedState(jobId, relatedRecordKeys);
-    List<Map<String, Object>> untypedStates = new List<Map<String, Object>>();
+    String json = '[';
     for (RollupState__c state : matchingState) {
       if (state.IsCached__c == false) {
         state.IsCached__c = true;
-        List<String> innerStates = new List<String>{
-          state.Body0__c,
-          state.Body1__c,
-          state.Body2__c,
-          state.Body3__c,
-          state.Body4__c,
-          state.Body5__c,
-          state.Body6__c,
-          state.Body7__c,
-          state.Body8__c,
-          state.Body9__c
-        };
-        for (String innerState : innerStates) {
-          if (innerState != null) {
-            // this is bad, but JSON.deserialize doesn't support List<Map<String, Object>> so there's just bad options all the way down
-            List<String> splitStates = innerState.split('\\},');
-            for (String splitState : splitStates) {
-              untypedStates.add((Map<String, Object>) JSON.deserializeUntyped(splitState.endsWith('}') ? splitState : splitState + '}'));
-            }
-          }
+        if (json != '[') {
+          json += ',';
+        }
+        if (state.Body0__c != null) {
+          json += state.Body0__c;
+        }
+        if (state.Body1__c != null) {
+          json += ',' + state.Body1__c;
+        }
+        if (state.Body2__c != null) {
+          json += ',' + state.Body2__c;
+        }
+        if (state.Body3__c != null) {
+          json += ',' + state.Body3__c;
+        }
+        if (state.Body4__c != null) {
+          json += ',' + state.Body4__c;
+        }
+        if (state.Body5__c != null) {
+          json += ',' + state.Body5__c;
+        }
+        if (state.Body6__c != null) {
+          json += ',' + state.Body6__c;
+        }
+        if (state.Body7__c != null) {
+          json += ',' + state.Body7__c;
+        }
+        if (state.Body8__c != null) {
+          json += ',' + state.Body8__c;
+        }
+        if (state.Body9__c != null) {
+          json += ',' + state.Body9__c;
         }
       }
     }
-    for (Map<String, Object> untypedState : untypedStates) {
-      RollupState parsedState = getTypedState(untypedState);
-      this.keyToState.put(parsedState.key, parsedState);
+    List<Object> uncastStates = new List<Object>();
+    if (json != '[') {
+      uncastStates.addAll(
+        (List<Object>) new DataWeaveScriptResource.jsonToRollupState().execute(new Map<String, Object>{ 'records' => json + ']' }).getValue()
+      );
+      // for (Object uncastStateList : uncastStates) {
+      //   List<Object> uncastStates = (List<Object>) uncastStateList;
+      for (Object uncastState : uncastStates) {
+        RollupState castState = (RollupState) uncastState;
+        this.keyToState.put(castState.key, castState);
+      }
     }
   }
 
-  @SuppressWarnings('PMD.ApexCrudViolation')
   public void commitState(String jobId) {
-    Map<String, List<RollupState>> relatedRecordsToStates = this.populateRelatedRecordStates();
-    List<RollupState__c> stateToInsert = new List<RollupState__c>();
-    List<List<String>> overflowStatesList = new List<List<String>>();
-    for (String relatedRecordsKey : relatedRecordsToStates.keySet()) {
-      List<RollupState> matchingStates = relatedRecordsToStates.get(relatedRecordsKey);
-
-      List<List<String>> serializedStatesList = new List<List<String>>{ new List<String>() };
-      Integer maxBodyLength = RollupState__c.Body0__c.getDescribe().getLength();
-      Integer currentLength = 0;
-
-      for (RollupState stateToAdd : matchingStates) {
-        List<String> serializedStates = serializedStatesList[serializedStatesList.size() - 1];
-        String serializedState = stateToAdd.toString();
-
-        // account for the commas
-        currentLength += serializedState.length() + 1;
-        // There's some undocumented soft limit to the amount of data that can be stored in a long text area
-        // or, at the very least, there's something about this implementation that requires the extra space
-        // the bulk safe test failed with 800 as the magic number and started passing somewhere between there and 825
-        // using an extra buffer just in case
-        if ((currentLength + 1100) >= maxBodyLength) {
-          currentLength = 0;
-          serializedStates = new List<String>();
-          serializedStatesList.add(serializedStates);
-        }
-        serializedStates.add(serializedState);
-      }
-      RollupState__c toInsert = new RollupState__c(RelatedJobId__c = jobId, RelatedRecordKeys__c = relatedRecordsKey);
-      for (Integer index = 0; index < serializedStatesList.size(); index++) {
-        String body = String.join(serializedStatesList[index], ',');
-        setBody(toInsert, body, index, overflowStatesList);
-      }
-      stateToInsert.add(toInsert);
-
-      for (Integer outerIndex = 0; outerIndex < overflowStatesList.size(); outerIndex++) {
-        RollupState__c anotherInsert = new RollupState__c(RelatedJobId__c = jobId, RelatedRecordKeys__c = relatedRecordsKey);
-        List<String> overflowStates = overflowStatesList[outerIndex];
-        for (Integer index = 0; index < overflowStates.size(); index++) {
-          String body = overflowStates[index];
-          setBody(anotherInsert, body, index, null);
-        }
-        stateToInsert.add(anotherInsert);
-      }
-    }
-    Database.insert(stateToInsert, System.AccessLevel.SYSTEM_MODE);
+    this.populateRelatedRecordStates(jobId);
   }
 
   public void cleanup(Set<String> jobIds) {
@@ -279,9 +247,9 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
         quotedRecordKeys.add('%' + recordKey + '%');
       }
       states = [
-        SELECT Id, Body0__c, Body1__c, Body2__c, Body3__c, Body4__c, Body5__c, Body6__c, Body7__c, Body8__c, Body9__c, IsCached__c, RelatedRecordKeys__c
+        SELECT Id, Body0__c, Body1__c, Body2__c, Body3__c, Body4__c, Body5__c, Body6__c, Body7__c, Body8__c, Body9__c, IsCached__c
         FROM RollupState__c
-        WHERE RelatedRecordKeys__c LIKE :quotedRecordKeys AND RelatedJobId__c = :jobId
+        WHERE RelatedRecordKeysIndex__c LIKE :quotedRecordKeys AND RelatedJobId__c = :jobId
       ];
       CACHED_STATES.put(cacheKey, states);
       Database.delete(states, false, System.AccessLevel.SYSTEM_MODE);
@@ -289,95 +257,188 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
     return states;
   }
 
-  private Map<String, List<RollupState>> populateRelatedRecordStates() {
-    Map<String, List<RollupState>> relatedRecordsToStates = new Map<String, List<RollupState>>();
-    Set<String> relatedRecordsJoined = new Set<String>();
-    Integer relatedRecordCount = 0;
-    Integer counter = 0;
-    List<RollupState> currentState = new List<RollupState>();
-    Integer keyToStateSize = this.keyToState.size();
+  @SuppressWarnings('PMD.ApexCrudViolation')
+  private void populateRelatedRecordStates(String jobId) {
+    RollupState__c currentStateToInsert = new RollupState__c(RelatedJobId__c = jobId);
+    List<RollupState__c> statesToInsert = new List<RollupState__c>{ currentStateToInsert };
+    Set<String> relatedRecordKeys = new Set<String>();
+    Integer relatedRecordKeyLength = 0;
+    Integer currentRelatedRecordFieldIndex = 0;
+    Integer currentBodyFieldIndex = 0;
+    // all of the Body fields share the same length
+    Integer maxBodyLength = RollupState__c.Body0__c.getDescribe().getLength();
+    Integer currentLength = 0;
+    List<Map<String, Object>> untypedStates = new List<Map<String, Object>>();
+    Schema.SObjectField relatedKeysFieldToken = RollupState__c.RelatedRecordKeys__c;
+    Schema.SObjectField relatedBodyFieldToken = RollupState__c.Body0__c;
+    Boolean hasSetBody = false;
+    Boolean hasSetRelatedRecords = false;
     for (String key : this.keyToState.keySet()) {
       RollupState state = this.keyToState.get(key);
-      // Length of RollupState__c.RelatedRecordKeys__c (255) / key size: will be 14 unless people are using Apex Rollup with keys longer than 18
-      // in which case it'll end up being lower
-      if (relatedRecordCount == 255 / state.keyLength) {
-        relatedRecordCount = 0;
-        this.fillRelatedRecordStateMap(relatedRecordsToStates, getJoinedKeys(relatedRecordsJoined), new List<RollupState>(currentState));
-        relatedRecordsJoined = new Set<String>();
-        currentState = new List<RollupState>();
+
+      if (relatedRecordKeyLength + state.keyLength + 1 > 255) {
+        TokenSentinel sentinel = getRelatedRecordKeySentinel(currentRelatedRecordFieldIndex);
+        relatedKeysFieldToken = sentinel.token;
+        hasSetRelatedRecords = true;
+        relatedRecordKeyLength = 0;
+        currentStateToInsert.put(sentinel.token, getJoinedKeys(relatedRecordKeys));
+        relatedRecordKeys = new Set<String>();
+        if (sentinel.shouldReset) {
+          currentStateToInsert.put(relatedBodyFieldToken, getJoinedBody(untypedStates));
+          untypedStates = new List<Map<String, Object>>();
+          hasSetBody = false;
+          hasSetRelatedRecords = false;
+          currentRelatedRecordFieldIndex = 0;
+          currentBodyFieldIndex = 0;
+          currentLength = 0;
+          relatedBodyFieldToken = RollupState__c.Body0__c;
+          currentStateToInsert = new RollupState__c(RelatedJobId__c = jobId);
+          statesToInsert.add(currentStateToInsert);
+        } else {
+          currentRelatedRecordFieldIndex++;
+          hasSetRelatedRecords = false;
+        }
       }
       String recordKey = key.substring(0, state.keyLength);
-      relatedRecordsJoined.add(recordKey);
-      currentState.add(state);
-
-      counter++;
-      relatedRecordCount++;
-      if (counter == keyToStateSize) {
-        this.fillRelatedRecordStateMap(relatedRecordsToStates, getJoinedKeys(relatedRecordsJoined), new List<RollupState>(currentState));
+      if (relatedRecordKeys.contains(recordKey) == false) {
+        relatedRecordKeyLength += state.keyLength + 1;
+        relatedRecordKeys.add(recordKey);
       }
+      Map<String, Object> untypedState = state.getUntypedState();
+      String serializedState = '' + untypedState;
+
+      // 1.1 is enough of a buffer for the serialized version with quoted characters and the + 1 accounts for commas as the delimiter between objects
+      currentLength += (serializedState.length() * 1.1).intValue() + 1;
+      // There's some undocumented soft limit to the amount of data that can be stored in a long text area
+      // so we use another slight buffer to avoid running into the actual limit
+      if ((currentLength + 1100) >= maxBodyLength) {
+        TokenSentinel sentinel = getBodySentinel(currentBodyFieldIndex);
+        relatedBodyFieldToken = sentinel.token;
+        hasSetBody = true;
+        currentLength = 0;
+
+        currentStateToInsert.put(sentinel.token, getJoinedBody(untypedStates));
+        if (sentinel.shouldReset) {
+          currentStateToInsert.put(relatedKeysFieldToken, getJoinedKeys(relatedRecordKeys));
+          relatedRecordKeys = new Set<String>();
+          hasSetBody = false;
+          hasSetRelatedRecords = false;
+          currentRelatedRecordFieldIndex = 0;
+          currentBodyFieldIndex = 0;
+          currentLength = 0;
+          relatedRecordKeyLength = 0;
+          relatedKeysFieldToken = RollupState__c.RelatedRecordKeys__c;
+          currentStateToInsert = new RollupState__c(RelatedJobId__c = jobId);
+          statesToInsert.add(currentStateToInsert);
+        } else {
+          currentBodyFieldIndex++;
+          hasSetBody = false;
+        }
+        untypedStates = new List<Map<String, Object>>();
+      }
+      untypedStates.add(untypedState);
     }
-    return relatedRecordsToStates;
+    if (hasSetBody == false) {
+      TokenSentinel sentinel = getBodySentinel(currentBodyFieldIndex);
+      if (sentinel.shouldReset) {
+        currentStateToInsert = new RollupState__c(RelatedJobId__c = jobId, RelatedRecordKeys__c = getJoinedKeys(relatedRecordKeys));
+        statesToInsert.add(currentStateToInsert);
+      }
+      currentStateToInsert.put(relatedBodyFieldToken, getJoinedBody(untypedStates));
+    }
+    if (hasSetRelatedRecords == false) {
+      TokenSentinel sentinel = getRelatedRecordKeySentinel(currentRelatedRecordFieldIndex);
+      if (sentinel.shouldReset) {
+        currentStateToInsert = new RollupState__c(RelatedJobId__c = jobId, Body0__c = getJoinedBody(untypedStates));
+        statesToInsert.add(currentStateToInsert);
+      }
+      currentStateToInsert.put(sentinel.token, getJoinedKeys(relatedRecordKeys));
+    }
+    Database.insert(statesToInsert, System.AccessLevel.SYSTEM_MODE);
   }
 
-  private void fillRelatedRecordStateMap(Map<String, List<RollupState>> relatedRecordsToStates, String joinKey, List<RollupState> states) {
-    List<RollupState> existingStates = relatedRecordsToStates.get(joinKey);
-    if (existingStates == null) {
-      existingStates = new List<RollupState>();
-      relatedRecordsToStates.put(joinKey, existingStates);
-    }
-    existingStates.addAll(states);
+  private class TokenSentinel {
+    public Boolean shouldReset = false;
+    public Schema.SObjectField token;
   }
 
-  private static void setBody(RollupState__c state, String body, Integer index, List<List<String>> overflowStates) {
-    switch on index {
+  private static TokenSentinel getRelatedRecordKeySentinel(Integer currentIndex) {
+    TokenSentinel sentinel = new TokenSentinel();
+
+    switch on currentIndex {
       when 0 {
-        state.Body0__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys__c;
       }
       when 1 {
-        state.Body1__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys1__c;
       }
       when 2 {
-        state.Body2__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys2__c;
       }
       when 3 {
-        state.Body3__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys3__c;
       }
       when 4 {
-        state.Body4__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys4__c;
       }
       when 5 {
-        state.Body5__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys5__c;
       }
       when 6 {
-        state.Body6__c = body;
-      }
-      when 7 {
-        state.Body7__c = body;
-      }
-      when 8 {
-        state.Body8__c = body;
-      }
-      when 9 {
-        state.Body9__c = body;
+        sentinel.token = RollupState__c.RelatedRecordKeys6__c;
       }
       when else {
-        List<String> overflow;
-        if (Math.mod(index, 10) == 0) {
-          overflow = new List<String>();
-          overflowStates.add(overflow);
-        } else {
-          overflow = overflowStates[overflowStates.size() - 1];
-        }
-        overflow.add(body);
+        sentinel.token = RollupState__c.RelatedRecordKeys__c;
+        sentinel.shouldReset = true;
       }
     }
+    return sentinel;
   }
 
-  private static RollupState getTypedState(Map<String, Object> untypedState) {
-    RollupState parsedState = ((RollupState) Type.forName((String) untypedState.get('type')).newInstance()).parse(untypedState);
-    parsedState.key = (String) untypedState.get('key');
-    parsedState.keyLength = (Integer) untypedState.get('keyLength');
-    return parsedState;
+  private static TokenSentinel getBodySentinel(Integer currentIndex) {
+    TokenSentinel sentinel = new TokenSentinel();
+
+    switch on currentIndex {
+      when 0 {
+        sentinel.token = RollupState__c.Body0__c;
+      }
+      when 1 {
+        sentinel.token = RollupState__c.Body1__c;
+      }
+      when 2 {
+        sentinel.token = RollupState__c.Body2__c;
+      }
+      when 3 {
+        sentinel.token = RollupState__c.Body3__c;
+      }
+      when 4 {
+        sentinel.token = RollupState__c.Body4__c;
+      }
+      when 5 {
+        sentinel.token = RollupState__c.Body5__c;
+      }
+      when 6 {
+        sentinel.token = RollupState__c.Body6__c;
+      }
+      when 7 {
+        sentinel.token = RollupState__c.Body7__c;
+      }
+      when 8 {
+        sentinel.token = RollupState__c.Body8__c;
+      }
+      when 9 {
+        sentinel.token = RollupState__c.Body9__c;
+      }
+      when else {
+        sentinel.token = RollupState__c.Body0__c;
+        sentinel.shouldReset = true;
+      }
+    }
+    return sentinel;
+  }
+
+  private static String getJoinedBody(List<Map<String, Object>> untypedStates) {
+    return JSON.serialize(untypedStates).removeStart('[').removeEnd(']');
   }
 
   private static String getJoinedKeys(Iterable<String> values) {
@@ -385,12 +446,6 @@ public without sharing virtual class RollupState implements System.Queueable, Sy
   }
 
   private static String getMetadataKey(Rollup__mdt meta) {
-    return meta.CalcItem__c +
-      meta.RollupFieldOnCalcItem__c +
-      meta.LookupFieldOnCalcItem__c +
-      meta.RollupOperation__c +
-      meta.LookupObject__c +
-      meta.RollupFieldOnLookupObject__c +
-      meta.LookupFieldOnLookupObject__c;
+    return meta.DeveloperName ?? (meta.RollupOperation__c + meta.LookupObject__c + meta.RollupFieldOnLookupObject__c + meta.LookupFieldOnLookupObject__c);
   }
 }
