Fixes #626 by patching a few places where RollupControl__mdt being null (which is sometimes set internally by the framework for performance reasons) does not cause issues when trying to log

--- a/extra-tests/classes/RollupLimitsTest.cls
+++ b/extra-tests/classes/RollupLimitsTest.cls
@@ -2,6 +2,15 @@
 private class RollupLimitsTest {
   @IsTest
   static void correctlyReferencesOrgLimits() {
-    System.assertEquals(false, new RollupLimits.Tester(RollupControl__mdt.getInstance('Org_Default'), false).hasExceededOrgAsyncLimit());
+    Assert.areEqual(false, new RollupLimits.Tester(RollupControl__mdt.getInstance('Org_Default'), false).hasExceededOrgAsyncLimit());
+  }
+
+  @IsTest
+  static void doesNotThrowForNullControl() {
+    RollupLimits.stubbedQueryRows = 50001;
+
+    Boolean hasExceededLimits = Rollup.hasExceededCurrentRollupLimits(null);
+
+    Assert.isTrue(hasExceededLimits);
   }
 }
