--- a/extra-tests/classes/RollupSObjectUpdaterTests.cls
+++ b/extra-tests/classes/RollupSObjectUpdaterTests.cls
@@ -157,6 +157,25 @@ public class RollupSObjectUpdaterTests {
     Assert.areEqual('Update failed. First exception on row 0; first error: MISSING_ARGUMENT, Id not specified in an update call: []', message);
   }
 
+  @IsTest
+  static void nullRollupControlDoesNotPreventExecution() {
+    RollupLimits.stubbedQueryRows = 50001;
+    RollupControl__mdt control = new RollupControl__mdt();
+    RollupSObjectUpdater updater = new RollupSObjectUpdater();
+
+    updater.forceSyncUpdate();
+    updater.addRollupControl(control);
+    control = null;
+
+    Exception ex;
+    try {
+      updater.doUpdate(new List<SObject>{ new Account(Id = RollupTestUtils.createId(Account.SObjectType)) });
+    } catch (Exception e) {
+      ex = e;
+    }
+    Assert.isNull(ex);
+  }
+
   public class MockUpdater implements RollupSObjectUpdater.IUpdater {
     public void performUpdate(List<SObject> recordsToUpdate, Database.DMLOptions options) {
       mockUpdatedRecords = recordsToUpdate;
